--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>2.3.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.user.api</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>com.api</groupId>
+    <artifactId>user</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>user-api</name>
     <description>A SpringBoot API with MongoDB</description>
@@ -39,6 +39,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-deploy-plugin</artifactId>
+    <version>2.8.2</version>
+</dependency>
+
     </dependencies>
 
     <pluginRepositories>
@@ -52,8 +60,13 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
