--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,20 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+
+
+                 <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.1.0</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <classpathPrefix>lib/</classpathPrefix>
+            <mainClass>com.user.api.mongo.UserApiApplication</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
             </plugin>
         </plugins>
     </build>
