--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,10 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
 
-
-                 <groupId>org.apache.maven.plugins</groupId>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
       <version>3.1.0</version>
       <configuration>
@@ -80,8 +81,7 @@
             <mainClass>com.user.api.mongo.UserApiApplication</mainClass>
           </manifest>
         </archive>
-      </configuration>
-            </plugin>
+      </configuration></plugin>
         </plugins>
     </build>
 
