--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.data.mongodb.uri=mongodb+srv://muriel:test@cluster0.tmjxh.gcp.mongodb.net/api?retryWrites=true&w=majority
+java.runtime.version=1.8
