--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
+
                             <mainClass>com.user.api.mongo.UserApiApplication</mainClass>
                         </manifest>
                     </archive>
@@ -71,6 +70,9 @@
                     <groupId>com.heroku.sdk</groupId>
                     <artifactId>heroku-maven-plugin</artifactId>
                     <version>3.0.3</version>
+                    <configuration>
+                        <appName>api-user-spring</appName>
+                    </configuration>
                 </plugin>
 
             <plugin>
