--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,9 @@
         <groupId>com.heroku.sdk</groupId>
         <artifactId>heroku-maven-plugin</artifactId>
         <version>3.0.3</version>
+            <configuration>
+                <appName>api-spring-users</appName>
+            </configuration>
       </plugin>
         </plugins>
     </build>
